# wavedrom-ascii

./: LICENSE  README.md  pyproject.toml
test/: example.json5  fields.json5  test_wavedrom_bitfields.py  test_wavedrom_waves.py  waves.json5
wavedrom_ascii/: __init__.py
