[tool.poetry]
name = "wavedrom-ascii"
version = "0.1.0"
description = "Wavedrom waves and registers for the terminal"
authors = ["zegervdv <zegervdv@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
json5 = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
