[tool.poetry]
name = "wavedrom-ascii"
version = "0.2.0"
description = "Wavedrom waves and registers for the terminal"
authors = ["zegervdv <zegervdv@me.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/zegervdv/wavedrom-ascii"
homepage = "https://github.com/zegervdv/wavedrom-ascii"

[tool.poetry.dependencies]
python = "^3.5"
json5 = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
